Finalize Dockerfile to only setup tomcat. The webapp is added as a volume. Add VMs for docker and non-docker instances. Workout startup and configuration details.